--- a/style.css
+++ b/style.css
@@ -1,41 +1,84 @@
-body,
-html {
-  width: 100%;
-  height: 100%;
-  font-family: 'Montserrat', sans-serif;
-  background: url(header.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+body {
+	margin: 0px;
+	margin-top: 0px;
+	background-image: url(background1.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+ 	background-attachment: fixed;
+ 	background-position: center;
+
 }
-h1{
-	font-size: 3rem;
-	color: #e2dbdb;
+
+nav {
+	background-image: linear-gradient(to right,#DC4F00,#FF640D);
+	padding: 1px;
+	border-radius: 5px;
 }
-hr{
-	border-color: #F05F44;
-	border-width: 3px;
-	max-width: 65px;
+li {
+	display: inline-block;
+	margin-right: 5px;
 }
-.buffer{
-	height: 8rem;
+.button {
+	padding: 5px;
+	margin: 0px 2px;
+	font-size: 20px;
+	color: white;
+	text-decoration: none;
+	background-color: #00AA7B;
+	border: 2px solid #00AA7B;
+	border-radius: 10%;
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24)
 }
-.btn-xl{
-	padding: 1rem 1.5rem;
-	
+.button:hover {
+	color: #00AA7B;
+	background-color: white;
 }
-.btn{
-	font-weight: 700;
-	border-radius: 30px;
-	text-transform: uppercase;
+.tranbox {
+	background-color: white;
+	opacity: 0.6;
 }
-.btn-primary{
-	background-color: #F05F44;
-	border-color: #F05F44;
+h1 {
+	color: #00AA7B;
+	text-align: center;
+	font-family: Cursive;
+	font-size: 50px;
+	text-decoration: underline;
+	font-style: italic;
+	margin-top: 0px;
+	cursor: default;
 }
-.btn-primary:hover {
-	background-color: rgba(240, 95, 68, 0.9);
-	border-color: rgba(240, 95, 68, 0.9);
-	border-width: 2px;
+h2 {
+	color: #FF9B63;
+	margin-left: 10px;
+	text-decoration: underline;
+	font-size: 30px;
+	font-family: 'Yusei Magic', sans-serif;
+}
+.container {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+img {
+	width: 200px;
+	height: 250px;
+	margin: 4px 10px;
+	transition: all 500ms;
+	border-radius: 8px;
+}
+img:hover {
+	transform: scale(1.05);
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.54)
+}
+.footer{
+  	position: fixed;
+  	left: 0;
+  	bottom: 0;
+  	width: 100%;
+	background-color: rgba(0, 170, 123, 0.8);
+	color: white;
+  	text-align: center;
+}
+footer {
+	padding: 25px;
 }
